fixed header spacing

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ body {
     margin: auto;
     margin-top: var(--s-small);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap: 10rem;
 }
@@ -777,7 +777,7 @@ td {
 
 .why-choose-us h3 {
     text-align: center;
-    padding: 4rem 0;
+    padding: 4rem 0 0;
 }
 
 .why-choose-us h4 {
@@ -1104,6 +1104,10 @@ footer {
     }
 
     /* why choose us section */
+    .why-choose-us h3 {
+        padding: 4rem 0;
+    }
+
     .why-choose-us .items {
         gap: 2rem;
         padding: 2rem;
